objects/kugo2p__InvoiceSchedule__c.object
<CustomObject>
    <description>Kugamon - Related object to Kugamon Settings that defines Invoice creation rules.</description>
    <fields>
        <fullName>kugo2p__Description__c</fullName>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__ExcludeProductsfromSchedule__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Excludes Product Lines form Invoice Schedule. Product Lines are Invoiced on the Invoice Date Basis. Support Invoice Date Basis &quot;Order Date Required&quot; and &quot;Order Date Available to Promise&quot; only.</description>
        <inlineHelpText>Excludes Product Lines form Invoice Schedule. Support Invoice Date Basis &quot;Order Date Required&quot; and &quot;Order Date Available to Promise&quot; only.</inlineHelpText>
        <label>Exclude Products from Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__InvoiceDateBasis__c</fullName>
        <formula>IF(
  ISBLANK(TEXT(kugo2p__KugamonSetting__r.kugo2p__FirstInvoiceDateBasis__c)), 
  &apos;Order Date Released&apos;,
  TEXT(kugo2p__KugamonSetting__r.kugo2p__FirstInvoiceDateBasis__c)
)</formula>
        <inlineHelpText>From Kugamon Settings</inlineHelpText>
        <label>Invoice Date Basis</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__KugamonSetting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Kugamon Setting</label>
        <referenceTo>kugo2p__KugamonSetting__c</referenceTo>
        <relationshipLabel>Invoice Schedules</relationshipLabel>
        <relationshipName>Invoice_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__SchedulePeriod__c</fullName>
        <inlineHelpText>Blank means One-Time Invoicing</inlineHelpText>
        <label>Schedule Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__ServicesInvoicedAtServiceStart__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If checked, the invoices will be scheduled at the start of each service period. If unchecked, the invoices will be scheduled at the end of each service period.</inlineHelpText>
        <label>Services Invoiced at Service Start</label>
        <type>Checkbox</type>
    </fields>
    <label>Invoice Schedule</label>
    <nameField>
        <label>Schedule</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>